Add design system page
- add dummy images
- add design system menu and display layout
- add example components: miniaturka and pelnyWidok

Changes to be committed:
	modified:   README.md
	new file:   components/DesignSystem_LayoutDisplay.js
	new file:   components/DesignSystem_LayoutMenu.js
	new file:   components/Miniaturka.js
	new file:   components/PelnyWidok.js
	new file:   pages/design-system/miniaturka.js
	new file:   pages/design-system/pelnywidok.js
	modified:   pages/index.js
	modified:   postcss.config.js
	new file:   public/img-dummy-150.png
	new file:   public/img-dummy-4464.png
	new file:   styles/buttons.css
	modified:   styles/index.css
	new file:   styles/layout.css
	modified:   tailwind-full.config.js
	modified:   tailwind.config.js

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,5 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
+@import "./layout.css";
+@import "./buttons.css";
 @import "tailwindcss/utilities";
-
-body {
-  @apply p-12 bg-blue-500;
-}
